W05 Assignment: Product Review Form (Contrast Corrected)

--- a/styles/form.css
+++ b/styles/form.css
@@ -1,18 +1,19 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    color: #333;
+    background-color: white;
+    color: black;
     padding: 20px;
 }
 
 .container {
     max-width: 500px;
     margin: 0 auto;
-    background-color: #b1b1b1;
+    background-color: #f3eeee;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+
 }
 .reviews {
     max-width: 500px;
@@ -45,7 +46,7 @@ select, input[type="text"], input[type="date"], textarea {
 }
 
 .rating {
-    display: flex;
+    display:flex;
     justify-content: space-between;
     max-width: 300px;
     margin: 5px 20px;
@@ -63,7 +64,7 @@ select, input[type="text"], input[type="date"], textarea {
 .rating label {
     font-size: 30px;
     cursor: pointer;
-    color: #d3d3d3;
+    color:black;
 }
 
 .rating input[type="radio"]:checked ~ label {
@@ -119,4 +120,11 @@ footer{
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+    .rating {
+        display:block;
+        
+    }
 }
